update: cerate api dashboard and change api update work order
